[package]
name = "jasper"
version = "0.1.0"
authors = ["David Kushner <root@davidkushner.me>"]
description = "Immersive UI rendering for Amethyst leveraging Servo."
edition = "2018"
categories = ["game-engines", "interface", "ui"]

[dependencies]
layout = { git = "https://github.com/servo/servo.git" }
amethyst_assets = "0.5.0"
amethyst_audio = "0.4.0"
amethyst_core = "0.4.0"
amethyst_renderer = "0.9.0"
amethyst_input = "0.5.0"
clipboard = "0.5"
thread_profiler = { version = "0.3", optional = true }

[features]
profiler = ["thread_profiler/thread_profiler"]
nightly = ["amethyst_core/nightly"]